--- a/templates/home.html
+++ b/templates/home.html
@@ -40,8 +40,8 @@
 
     <form action="/compare" method="post" enctype="multipart/form-data">
         
-        image1 : <input type="file" name="file1"> <br/>
-        image2 : <input type="file" name="file2"> <br/>
+        image1 : <input type="file" name="file1">
+        image2 : <input type="file" name="file2">
         <input type="submit" value="얼굴 비교">
 
     </form>    
